--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "dependencies": {
     "async": "^2.6.1",
+    "bcrypt": "^3.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
     "password-generator": "^2.2.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "uuid": "^3.3.2",
+    "validator": "^10.9.0"
   }
 }
