--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "password-generator": "^2.2.0",
     "pug": "2.0.0-beta11",
     "uuid": "^3.3.2",
-    "validator": "^10.9.0"
+    "validator": "^10.9.0",
+    "watson-developer-cloud": "^3.13.1"
   }
 }
